--- a/TSAHandset/Views/Home/AdminIndex.cshtml
+++ b/TSAHandset/Views/Home/AdminIndex.cshtml
@@ -118,8 +118,8 @@
                <table id="allRequestsTable" class="table table-striped table-hover">
                    <thead>
                    <th>Name</th>
-                   <th>Requested Date</th>
-                   <th>Aporoved/rejected Date</th>
+                   <th class="hidden-xs">Requested Date</th>
+                   <th class="hidden-xs">Aporoved/rejected Date</th>
                    <th>Status</th>
                    <th>Action</th>
                    </thead>
@@ -128,8 +128,8 @@
                        {
                            <tr>
                                <td>@requst.RequestUserName</td>
-                               <td>@requst.RequestDate.ToShortDateString()</td>
-                               <td>@if (requst.ApprovedDate.ToString() != "") { @requst.ApprovedDate.Value.ToShortDateString(); }</td>
+                               <td class="hidden-xs">@requst.RequestDate.ToShortDateString()</td>
+                               <td class="hidden-xs">@if (requst.ApprovedDate.ToString() != "") { @requst.ApprovedDate.Value.ToShortDateString(); }</td>
                                <td>@requst.Progress.ProgressLevelName</td>
                                <td>
                                    
@@ -137,11 +137,11 @@
                                    {
                                     <span class="input-group-btn">
                                         <button type="button" id="approveRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-success" data-toggle="modal" data-target="#accept-request-dialog">
-                                            <i class="material-icons">thumb_up</i> Approve
+                                            <i class="material-icons">thumb_up</i> <text class=""> Approve</text>
                                         </button>
 
                                         <button type="button" id="rejectRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#reject-request-dialog">
-                                            <i class="material-icons">thumb_down</i> Reject
+                                            <i class="material-icons">thumb_down</i> <text class=""> Reject</text>
                                         </button>
                                     </span>
                                    }
@@ -174,8 +174,8 @@
                 <table id="pendingRequestsTable" class="table table-striped table-hover">
                     <thead>
                     <th>Name</th>
-                    <th>Requested Date</th>
-                    <th>Aporoved/rejected Date</th>
+                    <th class="hidden-xs">Requested Date</th>
+                    <th class="hidden-xs">Aporoved/rejected Date</th>
                     <th>Status</th>
                     <th>Action</th>
                     </thead>
@@ -186,8 +186,8 @@
                             {
                                 <tr>
                                     <td>@requst.RequestUserName</td>
-                                    <td>@requst.RequestDate.ToShortDateString()</td>
-                                    <td>@if (requst.ApprovedDate.ToString() != ""){ @requst.ApprovedDate.Value.ToShortDateString();}</td>
+                                    <td class="hidden-xs">@requst.RequestDate.ToShortDateString()</td>
+                                    <td class="hidden-xs">@if (requst.ApprovedDate.ToString() != ""){ @requst.ApprovedDate.Value.ToShortDateString();}</td>
                                     <td>@requst.Progress.ProgressLevelName</td>
                                     <td>
 
@@ -196,11 +196,11 @@
 
                                         <span class="input-group-btn">
                                             <button type="button" id="approveRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-success" data-toggle="modal" data-target="#accept-request-dialog">
-                                                <i class="material-icons">thumb_up</i> Approve
+                                                <i class="material-icons">thumb_up</i> <span class=""> Approve</span>
                                             </button>
 
                                             <button type="button" id="rejectRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#reject-request-dialog">
-                                                <i class="material-icons">thumb_down</i> Reject
+                                                <i class="material-icons">thumb_down</i> <span class=""> Reject</span>
                                             </button>
                                         </span>
                                     </td>
@@ -230,8 +230,8 @@
                 <table id="acceptedRequestsTable" class="table table-striped table-hover">
                     <thead>
                     <th>Name</th>
-                    <th>Requested Date</th>
-                    <th>Aporoved/rejected Date</th>
+                    <th class="hidden-xs">Requested Date</th>
+                    <th class="hidden-xs">Aporoved/rejected Date</th>
                     <th>Status</th>
                     <th>Action</th>
                     </thead>
@@ -242,8 +242,8 @@
                             {
                                 <tr>
                                     <td>@requst.RequestUserName</td>
-                                    <td>@requst.RequestDate.ToShortDateString()</td>
-                                    <td>@if (requst.ApprovedDate.ToString() != ""){ @requst.ApprovedDate.Value.ToShortDateString();}</td>
+                                    <td class="hidden-xs">@requst.RequestDate.ToShortDateString()</td>
+                                    <td class="hidden-xs">@if (requst.ApprovedDate.ToString() != ""){ @requst.ApprovedDate.Value.ToShortDateString();}</td>
                                     <td>@requst.Progress.ProgressLevelName</td>
                                     <td>
 
@@ -252,11 +252,11 @@
 
                                         <span class="input-group-btn">
                                             <button type="button" id="approveRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-success" data-toggle="modal" data-target="#accept-request-dialog">
-                                                <i class="material-icons">thumb_up</i> Approve
+                                                <i class="material-icons">thumb_up</i><span class=""> Approve</span> 
                                             </button>
 
                                             <button type="button" id="rejectRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#reject-request-dialog">
-                                                <i class="material-icons">thumb_down</i> Reject
+                                                <i class="material-icons">thumb_down</i><span class=""> Reject</span> 
                                             </button>
                                         </span>
                                     </td>
@@ -286,8 +286,8 @@
                 <table id="userRequestsTable" class="table table-striped table-hover">
                     <thead>
                     <th>Name</th>
-                    <th>Requested Date</th>
-                    <th>Aporoved/rejected Date</th>
+                    <th class="hidden-xs">Requested Date</th>
+                    <th class="hidden-xs">Aporoved/rejected Date</th>
                     <th>Status</th>
                     <th>Action</th>
                     </thead>
@@ -297,8 +297,8 @@
                           
                                 <tr>
                                     <td>@requst.RequestUserName</td>
-                                    <td>@requst.RequestDate.ToShortDateString()</td>
-                                    <td>@if (requst.ApprovedDate.ToString() != ""){ @requst.ApprovedDate.Value.ToShortDateString();}</td>
+                                    <td class="hidden-xs">@requst.RequestDate.ToShortDateString()</td>
+                                    <td class="hidden-xs">@if (requst.ApprovedDate.ToString() != ""){ @requst.ApprovedDate.Value.ToShortDateString();}</td>
                                     <td>@requst.Progress.ProgressLevelName</td>
                                     <td>
 
@@ -307,11 +307,11 @@
 
                                         <span class="input-group-btn">
                                             <button type="button" id="approveRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-success" data-toggle="modal" data-target="#accept-request-dialog">
-                                                <i class="material-icons">thumb_up</i> Approve
+                                                <i class="material-icons">thumb_up</i> <span class=""> Approve</span>
                                             </button>
 
                                             <button type="button" id="rejectRequest" data-id="@requst.Id" onclick="requestAction(this)" class="btn btn-xs btn-danger" data-toggle="modal" data-target="#reject-request-dialog">
-                                                <i class="material-icons">thumb_down</i> Reject
+                                                <i class="material-icons">thumb_down</i> <span class=""> Reject</span>
                                             </button>
                                         </span>
                                     </td>
